overlays/staging/service.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: testapp
      app.kubernetes.io/component: testapp
      app.kubernetes.io/instance: testapp
      app.kubernetes.io/part-of: testapp-app
    name: testapp
    namespace: testapp
  spec:
    ports:
    - name: 9000-tcp
      port: 9000
      protocol: TCP
      targetPort: 9000
    selector:
      app: testapp
      deploymentconfig: testapp
    sessionAffinity: None
    type: ClusterIP
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
