overlays/staging/route.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: testapp
      app.kubernetes.io/component: testapp
      app.kubernetes.io/instance: testapp
      app.kubernetes.io/part-of: testapp-app
    name: testapp
    namespace: testapp
  spec:
    host: testapp-testapp.apps-crc.testing
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: testapp
      weight: 100
    wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
